Can't fix bg fixed on mobile

--- a/css/coach.css
+++ b/css/coach.css
@@ -3,13 +3,13 @@
     font-size: 1.4em;
     margin: 0;
     background: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(../img/pexels-photo-416754.jpeg) no-repeat center fixed; 
+    background-size: cover; 
     display: flex;
 }
 
 /* Mobile */
 @media all and (max-width: 540px) {
     .thecoach {
-        background-size: auto 110vh; 
         padding: 50px 40px;
         flex-direction: column;
         align-items: center;
@@ -23,7 +23,6 @@
 /* Desktop */
 @media all and (min-width: 541px) {
     .thecoach {
-        background-size: cover; 
         padding:40px;
         padding: 40px 15vh;
         justify-content: space-between;
